# minecraft_decorated_strings

./: Cargo.toml  README.md
.github/workflows/: ci.yml  create_new_tag.yml  release.yml
src/: color_code.rs  format_code.rs  lib.rs  main.rs  message.rs  util.rs
