[package]
name = "minecraft_decorated_strings"
version = "0.1.0"
authors = ["Lucky3028 <lucky3028.0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
strum = "0.15.0"
strum_macros = "0.15.0"